--- a/dev/src/pages/shop_basic.html
+++ b/dev/src/pages/shop_basic.html
@@ -128,7 +128,7 @@ goSearch.on('click',function () {
                         dianpu_ID = ismydata.shop_id,
                         shengfendaima = ismydata.province_code,
                         shujuTime = ismydata.timestamp,
-                        dianpu_name = decodeURIComponent(ismydata.shop_name),
+                        dianpu_name = decodeURIComponent(ismydata.shopname),
                         hangye = hangyeNum[hangyedaima];
 
                     console.log(ismydata.shopurl==undefined);
